--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,19 +4,19 @@ asgiref==3.7.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 deprecation==2.1.0
-Django @ file:///work/perseverance-python-buildout/croot/django_1698884878321/work
+Django ==  4.1
 django-cors-headers==4.3.1
 django-dotenv==1.4.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-et-xmlfile @ file:///work/perseverance-python-buildout/croot/et_xmlfile_1698868193149/work
+et-xmlfile == 1.1.0
 gotrue==2.1.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
 idna==3.6
 numpy==1.26.1
-openpyxl @ file:///work/perseverance-python-buildout/croot/openpyxl_1698896491780/work
+openpyxl == 3.0.10
 packaging==23.2
 pandas==2.1.4
 postgrest==0.15.0
@@ -31,7 +31,7 @@ requests==2.31.0
 setuptools==68.0.0
 six==1.16.0
 sniffio==1.3.0
-sqlparse @ file:///work/perseverance-python-buildout/croot/sqlparse_1698874574933/work
+sqlparse == 0.4.4
 storage3==0.7.0
 StrEnum==0.4.15
 supabase==2.3.4
