--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,7 +15,7 @@ h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
 idna==3.6
-numpy==1.26.1
+numpy>=1.24.0,<=1.26.1
 openpyxl == 3.0.10
 packaging==23.2
 pandas==2.1.4
