--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,8 @@
 FROM python:3.11-slim-buster
-
-WORKDIR  /app
-
+ENV PYTHONUNBUFFERED=1
+WORKDIR  /dynatest_backend
 COPY requirements.txt requirements.txt
-
 RUN pip3 install -r requirements.txt
 
-COPY . .
-
-CMD ["python3", "manage.py", "runserver",  "0.0.0.0:8000"]
   
 
