--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services :
       - 8000:8000
     image: app:dynatests-backend
     container_name: backend_container
-    command:  gunicorn backend.wsgi:application
+    command:  gunicorn -b 0.0.0.0:8000 backend.wsgi:application
+    # command:  gunicorn backend.wsgi:application
 
   celery:
       restart: always
